Fix hoverflow in side menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,8 +56,7 @@ h5{
 }
 
 .max_height{
-    max-height: calc(100vh - 80px);
-    min-height: calc(100vh - 80px);
+    height: calc(100vh - 80px);
 }
 
 
